--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,7 +8,18 @@
     "start": "next start",
     "lint": "next lint"
   },
+  "prettier": {
+    "printWidth": 120,
+    "singleQuote": true,
+    "trailingComma": "all",
+    "tabWidth": 2,
+    "useTabs": false,
+    "semi": true,
+    "bracketSpacing": true
+  },
   "dependencies": {
+    "@editorjs/editorjs": "^2.22.2",
+    "@hookform/resolvers": "^2.8.0",
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
     "clsx": "^1.1.1",
@@ -16,15 +27,13 @@
     "next": "11.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "sass": "^1.38.0"
+    "react-hook-form": "^7.14.0",
+    "sass": "^1.38.0",
+    "yup": "^0.32.9"
   },
   "devDependencies": {
     "eslint": "7.32.0",
     "eslint-config-next": "11.1.0",
     "typescript": "^4.3.5"
-  },
-  "description": "This is a [Next.js](https://nextjs.org/) project bootstrapped with [`create-next-app`](https://github.com/vercel/next.js/tree/canary/packages/create-next-app).",
-  "main": "next.config.js",
-  "author": "",
-  "license": "ISC"
+  }
 }
