--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,7 +23,8 @@
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.61",
-    "axios": "^0.27.2",
+    "@reduxjs/toolkit": "^1.6.2",
+    "axios": "^0.22.0",
     "clsx": "^1.1.1",
     "macro-css": "^1.0.5",
     "next": "11.1.0",
@@ -31,6 +32,7 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-hook-form": "^7.14.0",
+    "react-redux": "7.2.5",
     "sass": "^1.38.0",
     "yup": "^0.32.9"
   },
